--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <h2 class="section-title">Experiencia Profesional</h2>
                     
                     <div class="experience-item">
-                        <div class="job-title">Desarrollador Blockchain Senior</div>
+                        <div class="job-title">Desarrollador Blockchain junior</div>
                         <div class="company">GAMA Platform</div>
                         <div class="job-period">2025 - Proyecto colaborativo</div>
                         <div class="job-description">
