--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     </div>
                     <h2 class="section-title">NUESTRAS ANECDOTAS</h2>
                 </div>
-                <div class="personalized-message">Hay algo en especial que siempre recuerdo con mucho cariño, nuestro picnic fue algo que me hizo confirmar aun mas mi amor por ti, te veias hermosa y tambien fue una de las citas mas bonitas que hemos tenido. (aparte los "sanwiches?" "sandwitches??" (se me olvido como se esctibe jskdjakwñdj) estaban muy ricos xd) </div>
+                <div class="personalized-message">Hay algo en especial que siempre recuerdo con mucho cariño, nuestro picnic fue algo que me hizo confirmar aun mas mi amor por ti, te veias hermosa y tambien fue una de las citas mas bonitas que hemos tenido. (aparte los "sanwiches?" "sandwitches??" (se me olvido como se escribe jskdjakwñdj) estaban muy ricos xd) </div>
             </div>
             
             <div class="love-language-section fade-in" style="animation-delay: 0.6s;">
@@ -815,4 +815,5 @@ y el horizonte al que siempre me dirijo.</p>
     </script>
 </body>
 </html>
+
 
